--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "flickity": "^2.2.0",
     "jquery": "^3.4.1",
+    "package": "^1.0.1",
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
