--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.4.1",
     "package": "^1.0.1",
     "popper.js": "^1.15.0",
-    "sortablejs": "^1.10.0-rc3"
+    "sortablejs": "^1.10.0-rc3",
+    "stimulus": "^1.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
