add test command to app.json

--- a/app.json
+++ b/app.json
@@ -38,5 +38,12 @@
   "name": "artyque",
   "scripts": {
   },
-  "stack": "heroku-18"
+  "stack": "heroku-18",
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "rspec"
+      }
+    }
+  }
 }
