--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.4.1",
     "package": "^1.0.1",
     "popper.js": "^1.15.0",
+    "rails-ujs": "^5.2.3",
     "sortablejs": "^1.10.0-rc3",
     "stimulus": "^1.1.1"
   },
