--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "circletype": "^2.3.0",
     "flickity": "^2.2.0",
     "flickity-fullscreen": "^1.1.1",
     "jquery": "^3.4.1",
